<resources>
    <string name="app_name">fastcampus_calculator</string>

    <string name="calculator_clear">C</string>
    <string name="calculator_bracket">{ }</string>
    <string name="calculator_percent">%</string>
    <string name="calculator_division">÷</string>
    <string name="calculator_multiply">x</string>
    <string name="calculator_subtract">-</string>
    <string name="calculator_point">.</string>
    <string name="calculator_plus">+</string>
    <string name="calculator_equal">=</string>
    <string name="calculator_zero">0</string>
    <string name="calculator_one">1</string>
    <string name="calculator_two">2</string>
    <string name="calculator_three">3</string>
    <string name="calculator_four">4</string>
    <string name="calculator_five">5</string>
    <string name="calculator_six">6</string>
    <string name="calculator_seven">7</string>
    <string name="calculator_eight">8</string>
    <string name="calculator_nine">9</string>

    <string name="close">닫기</string>
    <string name="clear_calculate_history">계산 기록 삭제</string>

</resources>