<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/v_result_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tl_keypad_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/tv_expression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text = "1111 * 22"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_calculator_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tl_keypad_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:textSize="20sp"
        android:textColor="@color/dark_gray"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

    <TableLayout
        android:id="@+id/tl_keypad_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:shrinkColumns="*"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintVertical_weight="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_result_layout">

        <TableRow
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_clear"
                android:textSize="24sp"
                android:onClick="clickedClearButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_bracket"
                android:textSize="24sp"
                android:textColor="@color/sushi"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_percent"
                android:textSize="24sp"
                android:textColor="@color/sushi"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_division"
                android:textSize="24sp"
                android:textColor="@color/sushi"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_seven"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedClearButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_eight"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_nine"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_multiply"
                android:textSize="24sp"
                android:textColor="@color/sushi"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_four"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedClearButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_five"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_six"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_subtract"
                android:textSize="24sp"
                android:textColor="@color/sushi"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_one"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedClearButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_two"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_three"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_plus"
                android:textSize="24sp"
                android:textColor="@color/sushi"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_calculator_history"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:src="@drawable/ic_access_time"
                android:onClick="clickedCalculatorHistoryButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_zero"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1"
                android:layout_margin="7dp"
                android:text="@string/calculator_point"
                android:textSize="24sp"
                android:textColor="@color/matterhorn"
                android:onClick="clickedNumberButton"
                android:stateListAnimator="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_calculator_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_round100_stroke1_sushi"
                android:layout_margin="7dp"
                android:text="@string/calculator_equal"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:onClick="clickedCalculatorResultButton"
                android:stateListAnimator="@null"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>